# composite_usb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AppMain/head/: app_main.h
AppMain/src/: app_main.c
St_CubeHal/: .cproject  .mxproject  .project  CMakeLists.txt  CompositeUsb_CMX.ioc  src.ioc
St_CubeHal/Core/Inc/: stm32wbxx_it.h
St_CubeHal/Core/Src/: main.c  stm32wbxx_hal_msp.c
cmake/interface/: Components.cmake  StHal.cmake
cmake/toolchain/: toolchain_arm_cortex_m4.cmake
cmake/utils/: OpenOCD.cmake  Opts.cmake  PostBuild.cmake  VScode.cmake
cmake/utils/VScodeJsonIni/: settings.in
lib/: CMakeLists.txt
lib/AppMain/: CMakeLists.txt
lib/AppMain/head/: app_main.h
lib/AppMain/src/: app_main.c
lib/CompositeUsb/: CMakeLists.txt
lib/CompositeUsb/ReportTypes/: CdcType.h  HidType.h
lib/CompositeUsb/head/: CompositeUsb.h
lib/CompositeUsb/src/: CompositeUsb.c
lib/Debug/: CMakeLists.txt
lib/Debug/config/: Debug_Config.h
lib/Debug/head/: Debug_MSG.h  Debug_Print.h
lib/Debug/src/: Debug_Print.c
lib/FlashMemConfig/: CMakeLists.txt
lib/FlashMemConfig/Config/: FMConf.txt
lib/FlashMemConfig/Inc/: FMConf.h
lib/FlashMemConfig/Src/: FMConf.c
lib/Protocol/: CMakeLists.txt
lib/Protocol/CdcPort/: CMakeLists.txt
lib/Protocol/CdcPort/Inc/: BPCDCport.h
lib/Protocol/CdcPort/Src/: BPCDCport.c
lib/Protocol/Config/: BProtConf.h  VRegMap.h
lib/Protocol/Crc/: CMakeLists.txt
lib/Protocol/Crc/Inc/: crc.h
lib/Protocol/Crc/Src/: crc.c
lib/Protocol/HandlersCore/: CMakeLists.txt
lib/Protocol/HandlersCore/Inc/: HandlersCore.h
lib/Protocol/HandlersCore/Src/: HandlersCore.c
lib/Protocol/Inc/: BProt.h  BProtDef.h  BProtTypes.h
lib/Protocol/Src/: BProt.c
lib/Protocol/VRegs/: CMakeLists.txt
lib/Protocol/VRegs/Inc/: VReg.h
lib/Protocol/VRegs/Src/: VReg.c
lib/ProtocolsHandlers/: CMakeLists.txt
lib/ProtocolsHandlers/Inc/: BPHandlers.h
lib/ProtocolsHandlers/Src/: BPHandlers.c
lib/VirtComPort/: CMakeLists.txt
lib/VirtComPort/head/: VirtComPort.h
lib/VirtComPort/src/: VirtComPort.c
lib/rtos/: CMakeLists.txt
lib/rtos/CustomRtosFunc/: Custom_FreeRtos_Func.c  Custom_FreeRtos_Func.h
lib/rtos/FreeRtosConfig/: FreeRTOSConfig.h
lib/usb/: CMakeLists.txt
lib/usb/Custom/ClassComponents/cdc/: usbd_cdc_if.c  usbd_cdc_if.h
lib/usb/Custom/CoreComponents/: usbd_conf.c  usbd_conf.h
lib/usb/Custom/PortComponents/: usb_device.c  usb_device.h  usbd_desc.c
lib/usb/Custom/PortComponents/tmp/: usbd_desc.c  usbd_desc.h
lib/usb/tini_conf/: tusb_config.h
lib/usb/tiny_CustISR/: usb_ISR.c  usb_ISR.h  usb_events.h
lib/usb/tiny_descr/: usb_descriptors.c
src/: CMakeLists.txt  src.ioc
src/Core/Inc/: stm32wbxx_it.h
src/Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
